# advent-of-code

./: .gitmessage  Cargo.toml  Makefile  README.md  justfile
src/: lib.rs  main.rs
src/benchmark/: day07.rs  mod.rs
src/benchmark/year2024/: day07.rs  mod.rs
src/common/: constants.rs  error.rs  mod.rs  prelude.rs  traits.rs  types.rs
src/solutions/: mod.rs
src/solutions/year2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day18.rs  mod.rs
src/utils/: base_conversion.rs  graph.rs  grid.rs  mod.rs  prelude.rs  visualization.rs
tests/solutions/: mod.rs
tests/solutions/year2024/: day01_test.rs  day02_test.rs  day04_test.rs  day05_test.rs  day06_test.rs  day07_test.rs  day08_test.rs  day09_test.rs  day10_test.rs  day11_test.rs  day12_test.rs  day13_test.rs  day18_test.rs  mod.rs
