[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
color-eyre = "0.6.3"
criterion = "0.5.1"
crossterm = "0.28.1"
itertools = "0.13.0"
lazy_static = "1.5.0"
num-traits = "0.2.19"
plotters = "0.3.7"
rayon = "1.10.0"
regex = "1.11.1"

[dependencies.clap]
version = "4.4.11"
features = ["derive"]

[[bin]]
name = "aoc"
path = "src/bin/aoc.rs"
